# MCS-Convert

./: .gitignore  LICENSE  README.md  play.py  pyproject.toml
NSFPlay/: nsfplay.ini  nsfplay.txt
NSFPlay/Legend of Zelda 2, The - The Adventure of Link (EMU).zophar/: Legend of Zelda 2, The - The Adventure of Link (FDS)(1987-01-14)(Nintendo EAD)(Nintendo).m3u  Legend of Zelda 2, The - The Adventure of Link (FDS)(1987-01-14)(Nintendo EAD)(Nintendo).nsf
demos/: DRWIL_3V.MCS  DRWIL_4V.MCS  MAPLERAG.MCS  SMAR_3V.mcs  TESTSLOW.MCS  TESTTONE.MCS  Zelda_3V.mcs  Zelda_4V.mcs  make_maple_leaf.py  make_test_slow.py  make_test_tone.py
docs/: architecture.md  martypc-test-disk.md  mcs-format.md  nsf-format.md
mcs_convert/: __init__.py  audio.py  cli.py  dosplayer.py  drums.py  model.py  pitch.py  pt3.py  retrack.py  tracker.py
mcs_convert/gui/: __init__.py  export.py  player.py  viz.py
mcs_convert/mcs/: __init__.py  encode.py  reader.py  validate.py  writer.py
mcs_convert/nsf/: __init__.py  apu.py  cpu6502.py  extract.py  header.py
tests/: test_audio.py  test_cpu6502.py  test_dosplayer.py  test_encode.py  test_extract.py  test_header.py  test_mcs_reader.py  test_mcs_writer.py  test_nsf.py  test_pitch.py  test_tracker.py  test_universal.py  test_validate.py
tools/: make_mcs_dsk.py  make_test_mcs.py  mcs_dump.py
