[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mcs-convert"
version = "0.4.0"
description = "Player, viewer, and reverse-engineered format spec for Will Harvey's Music Construction Set (IBM-PC, 1984) - toward a full tracker editor and converter for various music formats"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "chjmartin2" }]
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
mcs-convert = "mcs_convert.cli:main"

[tool.setuptools.packages.find]
include = ["mcs_convert*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
